// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NiListItem has the expected html structure 1`] = `<!---->`;

exports[`NiListItem should append the fa-spin class 1`] = `
<div
  class="tm-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <i
        class="material-icons fa-spin"
      >
        rotate_right
      </i>
    </div>
    <div
      class="tm-li-label"
    >
      <div
        class="tm-li-title"
      >
        Connecting...
      </div>
      <div
        class="tm-li-subtitle"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show a dd link 1`] = `
<a
  class="tm-li tm-li-link v-enter v-enter-active"
  href="/location"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-dl"
    >
      <div
        class="tm-li-dt"
      >
        Link
      </div>
      <div
        class="tm-li-dd"
      >
        
      </div>
    </div>
    <div
      class="tm-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</a>
`;

exports[`NiListItem should show a description 1`] = `
<a
  class="tm-li tm-li-link v-enter v-enter-active"
  href="/location"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-dl"
    >
      <div
        class="tm-li-dt"
      >
        Link
      </div>
      <div
        class="tm-li-dd"
      >
        
      </div>
    </div>
    <div
      class="tm-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</a>
`;

exports[`NiListItem should show a label 1`] = `
<div
  class="tm-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-label"
    >
      <div
        class="tm-li-title"
      >
        Title
      </div>
      <div
        class="tm-li-subtitle"
      >
        Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show a router-link 1`] = `
<router-link
  class="tm-li tm-li-link v-enter v-enter-active"
  name="proposal"
  to="/location"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-dl"
    >
      <div
        class="tm-li-dt"
      >
        Link
      </div>
      <div
        class="tm-li-dd"
      >
        
      </div>
    </div>
    <div
      class="tm-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</router-link>
`;

exports[`NiListItem should show a subtitle router link 1`] = `
<router-link
  class="tm-li tm-li-link v-enter v-enter-active"
  name="proposal"
  to="/location"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-label"
    >
      <div
        class="tm-li-title"
      >
        
      </div>
      <div
        class="tm-li-subtitle"
      >
        
      </div>
    </div>
    <div
      class="tm-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</router-link>
`;

exports[`NiListItem should show a thumb 1`] = `
<a
  class="tm-li tm-li-link v-enter v-enter-active"
  href="/location"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-dl"
    >
      <div
        class="tm-li-dt"
      >
        Link
      </div>
      <div
        class="tm-li-dd"
      >
        
      </div>
    </div>
    <div
      class="tm-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</a>
`;

exports[`NiListItem should show as dd text 1`] = `
<div
  class="tm-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-dl"
    >
      <div
        class="tm-li-dt"
      >
        Link
      </div>
      <div
        class="tm-li-dd"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show as text 1`] = `
<div
  class="tm-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-label"
    >
      <div
        class="tm-li-title"
      >
        Link
      </div>
      <div
        class="tm-li-subtitle"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show as text link 1`] = `
<div
  class="tm-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="tm-li-container"
  >
    <div
      class="tm-li-thumb"
    >
      <!---->
    </div>
    <div
      class="tm-li-dl"
    >
      <div
        class="tm-li-dt"
      >
        Link
      </div>
      <div
        class="tm-li-dd"
      >
        
      </div>
    </div>
  </div>
</div>
`;
